--- a/styles/login.css
+++ b/styles/login.css
@@ -1,15 +1,40 @@
 
+h1{
+	text-align: center;
+}
+video { 
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%);
+ background: url('//demosthenes.info/assets/images/polina.jpg') no-repeat;
+  background-size: cover;
+  transition: 1s opacity;
+}
+.backgroundVideo{
+	height: 100%;
+	width: 100%;
+}
+#loginpage{
+	opacity: 0.8;
+}
 body{
 	background: #66ccff;
 }
 .title{
-	margin-top: 80px;
+	margin-top: 50px;
 	font-family: 'Poiret One', cursive;
 	color: white;
-	font-weight: bold;
+	font-weight: bolder;
 }
 .form_bg{
-	background-color: #ccffcc;
+	opacity: 0.8;
+	background-color: #d0cfcf;
 	padding: 20px;
 	border-radius: 10px;
 	position: absolute;
@@ -30,4 +55,11 @@ body{
 }
 .smallfont{
 	font-size: 13px;	
+}
+@media screen and (max-width: 500px) { 
+  div{width:70%;} 
+}
+@media screen and (max-device-width: 800px) {
+  html { background: url(//demosthenes.info/assets/images/polina.jpg) #000 no-repeat center center fixed; }
+  #bgvid { display: none; }
 }
