added session ... login and logout

--- a/styles/login.css
+++ b/styles/login.css
@@ -23,6 +23,10 @@ video {
 #loginpage{
 	opacity: 0.8;
 }
+.h1, .h2, .h3, h1, h2, h3 {
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
 body{
 	background: #66ccff;
 }
