admin page added invoice and transaction added

--- a/styles/newapp.css
+++ b/styles/newapp.css
@@ -1,11 +1,11 @@
 
 img{
 	width:100%;
-	height:200px;
+	height:150px;
 	align-content: center;
 }
 body{
-	background-color: #66ffcc;
+	background-color: white;
 }
 nav{
 	margin-top: 0;
